--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇹🇭 泰国-620.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.06MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
   - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-5.03MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
   - {name: 🇨🇳 中国-554.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-620.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
