--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇯🇵 日本-11.97MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇮🇳 印度-692.8KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-591.5KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇰🇷 韩国-1.76MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-5.03MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
   - {name: 🇨🇳 中国-554.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
