--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇮🇳 印度-692.8KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-591.5KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇰🇷 韩国-1.76MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-5.03MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇮🇳 印度-692.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-591.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
