--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-5.03MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-554.8KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 未知国家-1.85MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-342.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 未知国家-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
